# MarkPigeon

./: Development.md  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
assets/: README.md
examples/: sample.md
locales/: en.json  zh_CN.json
scripts/: release.py
src/: __init__.py  main.py
src/core/: __init__.py  config.py  converter.py  i18n.py  packer.py  parser.py  publisher.py  renderer.py
src/interfaces/: __init__.py
src/interfaces/cli/: __init__.py  main.py
src/interfaces/gui/: __init__.py  components.py  main_window.py  settings_dialog.py
tests/: __init__.py  test_core.py
themes/: github.css
